# Heard_It

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  style.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: file_transcribe.rs  main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/deepgram/: client.rs  mod.rs
